# cmake_simavr_sample

./: .gitignore  CMakeLists.txt  README  README.md
avr/: CMakeLists.txt  atmega168_ledramp.c  generic-gcc-avr.cmake  ledramp_avr.c
cmake/: FindPackageHandleStandardArgs.cmake  FindPackageMessage.cmake  Findruby.cmake  find_package_git.cmake
pc/: CMakeLists.txt  ledramp.c
pc/cores/: CMakeLists.txt
pc/parts/obj-x86_64-linux-gnu/: ac_input.d  button.d  ds1338_virt.d  hc595.d  hd44780.d  hd44780_glut.d  i2c_eeprom.d  libsimavrparts.so.1  rotenc.d  ssd1306_glut.d  ssd1306_virt.d  uart_pty.d  uart_udp.d
pc_simul/: CMakeLists.txt  ledramp.c
pc_simul/parts/: CMakeLists.txt
test_include/avr/: io.h
test_uCunit/: CMakeLists.txt  System.c  System.h  Testsuite.c  second_testsuite.c  second_testsuite.h
test_uCunit/avr/: sysmtem.c
test_unity/: CMakeLists.txt  TestProductionCode.c  makefile  test1.out  test2.out
test_unity/test_runners/: TestProductionCode2_Runner.c  TestProductionCode_Runner.c
